@startuml

interface ScoreboardDAO {
    +void append(ScoreboardEntry entry)
    +List<ScoreboardEntry> listAll()
}

class ScoreboardEntry {
    +String playerName
    +int score
    +int survivalTime
    +LocalDateTime playTime
    +int compareTo(ScoreboardEntry o)
}

class FileScoreboardDAOImpl {
    - Path savePath
    +void append(ScoreboardEntry entry)
    +ArrayList<ScoreboardEntry> listAll()
}

class Game {
    - ScoreboardDAO scoreboard
    + void onGameOver()
}

' Relationships'
ScoreboardDAO <|.. FileScoreboardDAOImpl
ScoreboardDAO --> ScoreboardEntry
FileScoreboardDAOImpl ..> ScoreboardEntry
Game --> ScoreboardDAO
Game ..> ScoreboardEntry

note right of ScoreboardDAO
  数据访问对象接口
  定义了对计分板数据的基本操作
end note

note right of FileScoreboardDAOImpl
  具体的数据访问实现类
  将计分板数据序列化到文件中
end note

note right of ScoreboardEntry
  计分板数据实体类
  使用record定义，包含玩家名、得分等信息
end note

note right of Game::scoreboard
  DAO模式应用点：
  1. 解耦数据访问与业务逻辑
  2. 易于更换数据存储方式（如改为数据库）
  3. 便于测试和维护
end note

note top of FileScoreboardDAOImpl
  使用Java序列化机制存储数据
  可以方便地替换为其他存储方式
  如数据库、网络存储等
end note

@enduml
